		- New modes for PCA matrix factorizations: SVD & EVD, in-place or reallocating [Parijat Mazumdar]
		- Add kernel multiclass strategy examples in multiclass notebook [Saurabh Mahindre]
		- Add decision trees notebook containing examples for ID3 algorithm [Parijat Mazumdar]
		- Add sudoku recognizer ipython notebook [Alejandro Hernandez]
	* Bugfixes:
		- Fix memory problem in PCA::apply_to_feature_matrix [Parijat Mazumdar]
		- Fix crash in LeastAngleRegression for the case D greater than N [Parijat Mazumdar]
		- Fix memory violations in bundle method solvers [Thoralf Klein]
		- Fix fail in library_mldatahdf5.cpp example when http://mldata.org is not working properly [Parijat Mazumdar]
	* Cleanup and API Changes:
		- PCA now depends on Eigen3 instead of LAPACK [Parijat Mazumdar]

2014-02-17 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 3.2.0 (libshogun 16.0, data 0.8, parameter 1)
	* This release also contains several cleanups and bugfixes:
	* Features:
		- Fully support python3 now
		- Add mini-batch k-means [Parijat Mazumdar]
		- Add k-means++ [Parijat Mazumdar]
		- Add sub-sequence string kernel [lambday]
	* Bugfixes:
		- Compile fixes for upcoming swig3.0
		- Speedup for gaussian process' apply()
		- Improve unit / integration test checks
		- libbmrm uninitialized memory reads [Thoralf Klein]
		- libocas uninitialized memory reads
		- Octave 3.8 compile fixes [Orion Poplawski]
		- Fix java modular compile error [Bjoern Esser]
	* Cleanup and API Changes:
		- None

2014-01-06 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 3.1.1 (libshogun 15.1, data 0.7, parameter 1)
	* This is a bugfix release:
	* Bugfixes:
		- Fix compile error occurring with CXX0X
		- Bump data version to required version

2014-01-05 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 3.1.0 (libshogun 15.0, data 0.6, parameter 1)
	* This release also contains several cleanups and bugfixes:
	* Features: